--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="https://medium.com/@atibhiagrawal">Blog</a>
+                    <a class="link" href="{{ site.url }}/blog">Blog</a>
                 </li>
             {% endif %}
         {% endif %}
