--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,16 +9,7 @@
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/blog">Blogs</a>
-                </li>
-            {% endif %}
-        {% endif %}
-        
-
-        {% if site.blog == true %}
-            {% if page.title == "Blog" %}
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/tags">Category Wise Blogs</a>
+                    <a class="link" href="{{ site.url }}/tags">Blogs</a>
                 </li>
             {% endif %}
         {% endif %}
