--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/tags">Blogs</a>
+                    <a class="link" href="{{ site.url }}/tags">Tech Blogs</a>
                 </li>
             {% endif %}
         {% endif %}
@@ -17,7 +17,7 @@
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/projects">Projects</a>
+                    <a class="link" href="{{ site.url }}/projects">Non-tech</a>
                 </li>
             {% endif %}
         {% endif %}
