--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,20 +14,20 @@
             {% endif %}
         {% endif %}
 
-        {% if site.projects == true %}
-            {% if page.title != "Projects" %}
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/projects">Non-tech</a>
-                </li>
-            {% endif %}
-        {% endif %}
-
         {% if site.about == true %}
             {% if page.title != "About" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/about">About</a>
                 </li>
             {% endif %}
+        {% endif %}
+
+        {% if site.projects == true %}
+        {% if page.title != "Projects" %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/projects">Musings</a>
+            </li>
+        {% endif %}
         {% endif %}
 
         {% if site.resume == true %}
