--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,29 +6,31 @@
             </li>
         {% endif %}
 
+        {% if site.about == true %}
+        {% if page.title != "About" %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/about">About</a>
+            </li>
+        {% endif %}
+        {% endif %}
+
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/tags">Tech Blogs</a>
+                    <a class="link" href="{{ site.url }}/blog">Blogs</a>
                 </li>
             {% endif %}
         {% endif %}
 
-        {% if site.about == true %}
-            {% if page.title != "About" %}
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/about">About</a>
-                </li>
-            {% endif %}
-        {% endif %}
-
+        
+<!-- 
         {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/projects">Musings</a>
                 </li>
             {% endif %}
-        {% endif %}
+        {% endif %} -->
 
         {% if site.resume == true %}
             <li class="item">
