Update blog, add talks, art

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,22 @@
             {% endif %}
         {% endif %}
 
+        {% if site.blog == true %}
+        {% if page.title != "Blog" %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/talks">Talks</a>
+            </li>
+        {% endif %}
+        {% endif %}
+
+        {% if site.blog == true %}
+        {% if page.title != "Blog" %}
+            <li class="item">
+                <a class="link" href="https://www.instagram.com/artbyatibhi/">Art</a>
+            </li>
+        {% endif %}
+        {% endif %}
+
         
 <!-- 
         {% if site.projects == true %}
