--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,11 +15,9 @@
         {% endif %}
 
         {% if site.blog == true %}
-            {% if page.title != "Blog" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/blog">Blogs</a>
+                    <a class="link" href="https://atibhiagrawal.medium.com/">Blog</a>                 
                 </li>
-            {% endif %}
         {% endif %}
 
         {% if site.blog == true %}
@@ -31,11 +29,11 @@
         {% endif %}
 
         {% if site.blog == true %}
-        {% if page.title != "Blog" %}
+            {% if page.title != "Blog" %}
             <li class="item">
                 <a class="link" href="https://www.instagram.com/artbyatibhi/">Art</a>
             </li>
-        {% endif %}
+            {% endif %}
         {% endif %}
 
         
